@@ -86,8 +86,8 @@ public class ExperimentalSettingsConfigurable implements SearchableConfigurable 
     myUseL2DependenciesCheckBox.setVisible(false);
 
     Hashtable qualityLabels = new Hashtable();
-    qualityLabels.put(new Integer(0), new JLabel("Fastest"));
-    qualityLabels.put(new Integer(100), new JLabel("Slowest"));
+    qualityLabels.put(Integer.valueOf(0), new JLabel("Fastest"));
+    qualityLabels.put(Integer.valueOf(100), new JLabel("Slowest"));
     myLayoutEditorQualitySlider.setLabelTable(qualityLabels);
     myLayoutEditorQualitySlider.setPaintLabels(true);
     myLayoutEditorQualitySlider.setPaintTicks(true);
